openshift/templates/strapi/dcExpWVolumeClaim.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for
        container strapi-pr-590; cpu, memory limit for container strapi-pr-590'
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: strapi-pr-590
      openshift.io/deployment.name: strapi-pr-590-2
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: "2021-02-26T23:49:39Z"
    generateName: strapi-pr-590-2-
    labels:
      app: strapi-pr-590
      deployment: strapi-pr-590-2
      deploymentconfig: strapi-pr-590
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/deployment-config.latest-version: {}
            f:openshift.io/deployment-config.name: {}
            f:openshift.io/deployment.name: {}
            f:openshift.io/generated-by: {}
          f:generateName: {}
          f:labels:
            .: {}
            f:app: {}
            f:deployment: {}
            f:deploymentconfig: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"6c482fa1-bad2-463a-8332-cfdad9e8102d"}:
              .: {}
              f:apiVersion: {}
              f:blockOwnerDeletion: {}
              f:controller: {}
              f:kind: {}
              f:name: {}
              f:uid: {}
        f:spec:
          f:containers:
            k:{"name":"strapi-pr-590"}:
              .: {}
              f:env:
                .: {}
                k:{"name":"ADMIN_JWT_SECRET"}:
                  .: {}
                  f:name: {}
                  f:valueFrom:
                    .: {}
                    f:secretKeyRef:
                      .: {}
                      f:key: {}
                      f:name: {}
                k:{"name":"DATABASE_URI"}:
                  .: {}
                  f:name: {}
                  f:valueFrom:
                    .: {}
                    f:secretKeyRef:
                      .: {}
                      f:key: {}
                      f:name: {}
              f:image: {}
              f:imagePullPolicy: {}
              f:name: {}
              f:resources: {}
              f:terminationMessagePath: {}
              f:terminationMessagePolicy: {}
              f:volumeMounts:
                .: {}
                k:{"mountPath":"/app/public/uploads"}:
                  .: {}
                  f:mountPath: {}
                  f:name: {}
          f:dnsPolicy: {}
          f:enableServiceLinks: {}
          f:restartPolicy: {}
          f:schedulerName: {}
          f:securityContext: {}
          f:terminationGracePeriodSeconds: {}
          f:volumes:
            .: {}
            k:{"name":"v1"}:
              .: {}
              f:name: {}
              f:persistentVolumeClaim:
                .: {}
                f:claimName: {}
      manager: kube-controller-manager
      operation: Update
      time: "2021-02-26T23:49:39Z"
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:conditions:
            .: {}
            k:{"type":"PodScheduled"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
      manager: kube-scheduler
      operation: Update
      time: "2021-02-26T23:49:39Z"
    name: strapi-pr-590-2-6qjgm
    namespace: c0cce6-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: strapi-pr-590-2
      uid: 6c482fa1-bad2-463a-8332-cfdad9e8102d
    resourceVersion: "601372938"
    selfLink: /api/v1/namespaces/c0cce6-dev/pods/strapi-pr-590-2-6qjgm
    uid: 2a0cc236-ea3a-4b47-82e7-d54355c97cb4
  spec:
    containers:
    - env:
      - name: DATABASE_URI
        valueFrom:
          secretKeyRef:
            key: mongo-url
            name: mongodb-creds
      - name: ADMIN_JWT_SECRET
        valueFrom:
          secretKeyRef:
            key: admin-jwt
            name: strapi-jwt
      image: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/strapi:pr-590
      imagePullPolicy: IfNotPresent
      name: strapi-pr-590
      resources:
        limits:
          cpu: 250m
          memory: 1Gi
        requests:
          cpu: 50m
          memory: 256Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1004860000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /app/public/uploads
        name: v1
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-9rp7w
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    imagePullSecrets:
    - name: default-dockercfg-wxptb
    nodeSelector:
      node-role.kubernetes.io/worker: ""
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1004860000
      seLinuxOptions:
        level: s0:c70,c15
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - name: v1
      persistentVolumeClaim:
        claimName: strapi-pvc
    - name: default-token-9rp7w
      secret:
        defaultMode: 420
        secretName: default-token-9rp7w
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2021-02-26T23:49:39Z"
      message: persistentvolumeclaim "strapi-pvc" not found
      reason: Unschedulable
      status: "False"
      type: PodScheduled
    phase: Pending
    qosClass: Burstable
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2021-02-26 23:37:21 +0000 UTC
      openshift.io/deployer-pod.created-at: 2021-02-26 23:36:30 +0000 UTC
      openshift.io/deployer-pod.name: strapi-pr-590-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: strapi-pr-590
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "3"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"strapi-pr-590","namespace":"c0cce6-dev","selfLink":"/apis/apps.openshift.io/v1/namespaces/c0cce6-dev/deploymentconfigs/strapi-pr-590","uid":"6130c7be-81f1-4a7b-9c94-08a690fb4cdf","resourceVersion":"601303809","generation":1,"creationTimestamp":"2021-02-26T23:36:29Z","labels":{"app":"strapi-pr-590","group":"strapi","pr":"590","version":"pr-590"},"annotations":{"kubectl.kubernetes.io/last-applied-configurati [...]
    creationTimestamp: "2021-02-26T23:36:30Z"
    generation: 4
    labels:
      app: strapi-pr-590
      group: strapi
      openshift.io/deployment-config.name: strapi-pr-590
      pr: "590"
      version: pr-590
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/deployer-pod.completed-at: {}
            f:openshift.io/deployer-pod.created-at: {}
            f:openshift.io/deployer-pod.name: {}
            f:openshift.io/deployment-config.latest-version: {}
            f:openshift.io/deployment-config.name: {}
            f:openshift.io/deployment.phase: {}
            f:openshift.io/deployment.replicas: {}
            f:openshift.io/deployment.status-reason: {}
            f:openshift.io/encoded-deployment-config: {}
          f:labels:
            .: {}
            f:app: {}
            f:group: {}
            f:openshift.io/deployment-config.name: {}
            f:pr: {}
            f:version: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"6130c7be-81f1-4a7b-9c94-08a690fb4cdf"}:
              .: {}
              f:apiVersion: {}
              f:blockOwnerDeletion: {}
              f:controller: {}
              f:kind: {}
              f:name: {}
              f:uid: {}
        f:spec:
          f:replicas: {}
          f:selector:
            .: {}
            f:app: {}
            f:deployment: {}
            f:deploymentconfig: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:openshift.io/deployment-config.latest-version: {}
                f:openshift.io/deployment-config.name: {}
                f:openshift.io/deployment.name: {}
                f:openshift.io/generated-by: {}
              f:creationTimestamp: {}
              f:labels:
                .: {}
                f:app: {}
                f:deployment: {}
                f:deploymentconfig: {}
            f:spec:
              .: {}
              f:containers:
                .: {}
                k:{"name":"strapi-pr-590"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"ADMIN_JWT_SECRET"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                    k:{"name":"DATABASE_URI"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
      manager: openshift-controller-manager
      operation: Update
      time: "2021-02-26T23:37:22Z"
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:spec:
              f:containers:
                k:{"name":"strapi-pr-590"}:
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/app/public/uploads"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:volumes:
                .: {}
                k:{"name":"v1"}:
                  .: {}
                  f:name: {}
                  f:persistentVolumeClaim:
                    .: {}
                    f:claimName: {}
      manager: oc
      operation: Update
      time: "2021-02-26T23:49:28Z"
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:observedGeneration: {}
          f:replicas: {}
      manager: kube-controller-manager
      operation: Update
      time: "2021-02-26T23:49:33Z"
    name: strapi-pr-590-1
    namespace: c0cce6-dev
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: strapi-pr-590
      uid: 6130c7be-81f1-4a7b-9c94-08a690fb4cdf
    resourceVersion: "601372463"
    selfLink: /api/v1/namespaces/c0cce6-dev/replicationcontrollers/strapi-pr-590-1
    uid: 1f00f0b5-f82e-4036-9764-8a86d1b3e315
  spec:
    replicas: 0
    selector:
      app: strapi-pr-590
      deployment: strapi-pr-590-1
      deploymentconfig: strapi-pr-590
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: strapi-pr-590
          openshift.io/deployment.name: strapi-pr-590-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: strapi-pr-590
          deployment: strapi-pr-590-1
          deploymentconfig: strapi-pr-590
      spec:
        containers:
        - env:
          - name: DATABASE_URI
            valueFrom:
              secretKeyRef:
                key: mongo-url
                name: mongodb-creds
          - name: ADMIN_JWT_SECRET
            valueFrom:
              secretKeyRef:
                key: admin-jwt
                name: strapi-jwt
          image: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/strapi:pr-590
          imagePullPolicy: IfNotPresent
          name: strapi-pr-590
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/public/uploads
            name: v1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: v1
          persistentVolumeClaim:
            claimName: strapi-pvc
  status:
    observedGeneration: 4
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/desired-replicas: "3"
      openshift.io/deployer-pod.created-at: 2021-02-26 23:49:29 +0000 UTC
      openshift.io/deployer-pod.name: strapi-pr-590-2-deploy
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: strapi-pr-590
      openshift.io/deployment.phase: Running
      openshift.io/deployment.replicas: "0"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"strapi-pr-590","namespace":"c0cce6-dev","selfLink":"/apis/apps.openshift.io/v1/namespaces/c0cce6-dev/deploymentconfigs/strapi-pr-590","uid":"6130c7be-81f1-4a7b-9c94-08a690fb4cdf","resourceVersion":"601372097","generation":2,"creationTimestamp":"2021-02-26T23:36:29Z","labels":{"app":"strapi-pr-590","group":"strapi","pr":"590","version":"pr-590"},"annotations":{"kubectl.kubernetes.io/last-applied-configurati [...]
    creationTimestamp: "2021-02-26T23:49:29Z"
    generation: 2
    labels:
      app: strapi-pr-590
      group: strapi
      openshift.io/deployment-config.name: strapi-pr-590
      pr: "590"
      version: pr-590
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/desired-replicas: {}
            f:openshift.io/deployer-pod.created-at: {}
            f:openshift.io/deployer-pod.name: {}
            f:openshift.io/deployment-config.latest-version: {}
            f:openshift.io/deployment-config.name: {}
            f:openshift.io/deployment.phase: {}
            f:openshift.io/deployment.replicas: {}
            f:openshift.io/deployment.status-reason: {}
            f:openshift.io/encoded-deployment-config: {}
          f:labels:
            .: {}
            f:app: {}
            f:group: {}
            f:openshift.io/deployment-config.name: {}
            f:pr: {}
            f:version: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"6130c7be-81f1-4a7b-9c94-08a690fb4cdf"}:
              .: {}
              f:apiVersion: {}
              f:blockOwnerDeletion: {}
              f:controller: {}
              f:kind: {}
              f:name: {}
              f:uid: {}
        f:spec:
          f:replicas: {}
          f:selector:
            .: {}
            f:app: {}
            f:deployment: {}
            f:deploymentconfig: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:openshift.io/deployment-config.latest-version: {}
                f:openshift.io/deployment-config.name: {}
                f:openshift.io/deployment.name: {}
                f:openshift.io/generated-by: {}
              f:creationTimestamp: {}
              f:labels:
                .: {}
                f:app: {}
                f:deployment: {}
                f:deploymentconfig: {}
            f:spec:
              .: {}
              f:containers:
                .: {}
                k:{"name":"strapi-pr-590"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"ADMIN_JWT_SECRET"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                    k:{"name":"DATABASE_URI"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/app/public/uploads"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"v1"}:
                  .: {}
                  f:name: {}
                  f:persistentVolumeClaim:
                    .: {}
                    f:claimName: {}
      manager: openshift-controller-manager
      operation: Update
      time: "2021-02-26T23:49:33Z"
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:fullyLabeledReplicas: {}
          f:observedGeneration: {}
          f:replicas: {}
      manager: kube-controller-manager
      operation: Update
      time: "2021-02-26T23:49:39Z"
    name: strapi-pr-590-2
    namespace: c0cce6-dev
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: strapi-pr-590
      uid: 6130c7be-81f1-4a7b-9c94-08a690fb4cdf
    resourceVersion: "601372943"
    selfLink: /api/v1/namespaces/c0cce6-dev/replicationcontrollers/strapi-pr-590-2
    uid: 6c482fa1-bad2-463a-8332-cfdad9e8102d
  spec:
    replicas: 1
    selector:
      app: strapi-pr-590
      deployment: strapi-pr-590-2
      deploymentconfig: strapi-pr-590
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "2"
          openshift.io/deployment-config.name: strapi-pr-590
          openshift.io/deployment.name: strapi-pr-590-2
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: strapi-pr-590
          deployment: strapi-pr-590-2
          deploymentconfig: strapi-pr-590
      spec:
        containers:
        - env:
          - name: DATABASE_URI
            valueFrom:
              secretKeyRef:
                key: mongo-url
                name: mongodb-creds
          - name: ADMIN_JWT_SECRET
            valueFrom:
              secretKeyRef:
                key: admin-jwt
                name: strapi-jwt
          image: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/strapi:pr-590
          imagePullPolicy: IfNotPresent
          name: strapi-pr-590
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/public/uploads
            name: v1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: v1
          persistentVolumeClaim:
            claimName: strapi-pvc
  status:
    fullyLabeledReplicas: 1
    observedGeneration: 2
    replicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"strapi-pr-590","group":"strapi","pr":"590","version":"pr-590"},"name":"strapi-pr-590","namespace":"c0cce6-dev"},"spec":{"ports":[{"name":"1337-1337","port":1337,"protocol":"TCP","targetPort":1337}],"selector":{"app":"strapi-pr-590"},"sessionAffinity":"None","type":"ClusterIP"},"status":{"loadBalancer":{}}}
    creationTimestamp: "2021-02-26T23:36:29Z"
    labels:
      app: strapi-pr-590
      group: strapi
      pr: "590"
      version: pr-590
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
            f:group: {}
            f:pr: {}
            f:version: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":1337,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: oc
      operation: Update
      time: "2021-02-26T23:36:29Z"
    name: strapi-pr-590
    namespace: c0cce6-dev
    resourceVersion: "601303796"
    selfLink: /api/v1/namespaces/c0cce6-dev/services/strapi-pr-590
    uid: 3a886b14-1665-453c-83e5-6791d4e7df95
  spec:
    clusterIP: 10.98.66.198
    ports:
    - name: 1337-1337
      port: 1337
      protocol: TCP
      targetPort: 1337
    selector:
      app: strapi-pr-590
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"generation":2,"labels":{"app":"strapi-pr-590","group":"strapi","pr":"590","version":"pr-590"},"name":"strapi-pr-590","namespace":"c0cce6-dev"},"spec":{"replicas":3,"revisionHistoryLimit":10,"selector":{"app":"strapi-pr-590"},"strategy":{"activeDeadlineSeconds":21600,"resources":{"cpu":{"limits":"500m","requests":"250m"},"memory":{"limits":"250Mi","requ [...]
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2021-02-26T23:36:29Z"
    generation: 2
    labels:
      app: strapi-pr-590
      group: strapi
      pr: "590"
      version: pr-590
    managedFields:
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:group: {}
            f:pr: {}
            f:version: {}
        f:spec:
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector:
            .: {}
            f:app: {}
          f:strategy:
            f:activeDeadlineSeconds: {}
            f:recreateParams:
              .: {}
              f:timeoutSeconds: {}
            f:type: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:openshift.io/generated-by: {}
              f:creationTimestamp: {}
              f:labels:
                .: {}
                f:app: {}
            f:spec:
              .: {}
              f:containers:
                .: {}
                k:{"name":"strapi-pr-590"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"ADMIN_JWT_SECRET"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                    k:{"name":"DATABASE_URI"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        .: {}
                        f:secretKeyRef:
                          .: {}
                          f:key: {}
                          f:name: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/app/public/uploads"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"v1"}:
                  .: {}
                  f:name: {}
                  f:persistentVolumeClaim:
                    .: {}
                    f:claimName: {}
          f:triggers: {}
      manager: oc
      operation: Update
      time: "2021-02-26T23:49:28Z"
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:details:
            .: {}
            f:causes: {}
            f:message: {}
          f:latestVersion: {}
          f:observedGeneration: {}
          f:replicas: {}
          f:unavailableReplicas: {}
          f:updatedReplicas: {}
      manager: openshift-controller-manager
      operation: Update
      time: "2021-02-26T23:49:39Z"
    name: strapi-pr-590
    namespace: c0cce6-dev
    resourceVersion: "601372965"
    selfLink: /apis/apps.openshift.io/v1/namespaces/c0cce6-dev/deploymentconfigs/strapi-pr-590
    uid: 6130c7be-81f1-4a7b-9c94-08a690fb4cdf
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      app: strapi-pr-590
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: strapi-pr-590
      spec:
        containers:
        - env:
          - name: DATABASE_URI
            valueFrom:
              secretKeyRef:
                key: mongo-url
                name: mongodb-creds
          - name: ADMIN_JWT_SECRET
            valueFrom:
              secretKeyRef:
                key: admin-jwt
                name: strapi-jwt
          image: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/strapi:pr-590
          imagePullPolicy: IfNotPresent
          name: strapi-pr-590
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/public/uploads
            name: v1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: v1
          persistentVolumeClaim:
            claimName: strapi-pvc
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 0
    conditions:
    - lastTransitionTime: "2021-02-26T23:49:33Z"
      lastUpdateTime: "2021-02-26T23:49:33Z"
      message: Deployment config does not have minimum availability.
      status: "False"
      type: Available
    - lastTransitionTime: "2021-02-26T23:49:39Z"
      lastUpdateTime: "2021-02-26T23:49:39Z"
      message: replication controller "strapi-pr-590-2" is progressing
      reason: ReplicationControllerUpdated
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 2
    observedGeneration: 2
    replicas: 1
    unavailableReplicas: 1
    updatedReplicas: 1
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"openshift.io/host.generated":"true"},"labels":{"app":"strapi-pr-590","group":"strapi","pr":"590","version":"pr-590"},"name":"strapi-pr-590","namespace":"c0cce6-dev"},"spec":{"port":{"targetPort":"1337-1337"},"tls":{"insecureEdgeTerminationPolicy":"Redirect","termination":"edge"},"to":{"kind":"Service","name":"strapi-pr-590","weight":100},"wildcardPolicy":"None"},"status":{}}
      openshift.io/host.generated: "true"
    creationTimestamp: "2021-02-26T23:36:29Z"
    labels:
      app: strapi-pr-590
      group: strapi
      pr: "590"
      version: pr-590
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:openshift.io/host.generated: {}
          f:labels:
            .: {}
            f:app: {}
            f:group: {}
            f:pr: {}
            f:version: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: oc
      operation: Update
      time: "2021-02-26T23:36:29Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      time: "2021-02-26T23:36:30Z"
    name: strapi-pr-590
    namespace: c0cce6-dev
    resourceVersion: "601303815"
    selfLink: /apis/route.openshift.io/v1/namespaces/c0cce6-dev/routes/strapi-pr-590
    uid: 5c4044d1-4a73-48e7-85b6-21fcd02328be
  spec:
    host: strapi-pr-590-c0cce6-dev.apps.silver.devops.gov.bc.ca
    port:
      targetPort: 1337-1337
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: strapi-pr-590
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2021-02-26T23:36:30Z"
        status: "True"
        type: Admitted
      host: strapi-pr-590-c0cce6-dev.apps.silver.devops.gov.bc.ca
      routerCanonicalHostname: apps.silver.devops.gov.bc.ca
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
